adds image directory, images, links

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -9,11 +9,20 @@
 
     <h3>People</h3>
     <p>Here are some of my favorite people!</p>
-    <ul>
-      <li>My brother Christopher</li>
+    <ul> 
+      <li>
+        <a href ="https://www.christopher.com">
+          My brother <strong>Christopher</strong>
+          <img src="img/christopher.jpg" alt="A picture of Christopher">
+        </a>
+      </li>
       <li>My mom and dad:
         <ul>
-          <li>Steve</li>
+          <li>
+            <a href ="https://www.steve.com">
+              <strong>Steve</strong>
+            </a>
+          </li>
           <li>Carol</li>
         </ul>
       </li>
