--- a/favorite-things.html
+++ b/favorite-things.html
@@ -6,7 +6,9 @@
   <body>
     <h1>My favorite things</h1>
     <h2>These are a few of my favorite things.</h2>
-
+    <!--
+      TODO: Come up with a DRY way to generate these line items
+    -->
     <h3>People</h3>
     <p>Here are some of my favorite people!</p>
     <ul> 
@@ -21,13 +23,29 @@
           <li>
             <a href ="https://www.steve.com">
               <strong>Steve</strong>
+              <img src="img/steve.jpg" alt="A picture of Steve">
+            </a>
+          </li>   
+          <li>
+            <a href="https://www.carol.com">
+              <strong>Carol</strong>
+              <img src="img/carol.jpg" alt="A picture of Carol">
             </a>
           </li>
-          <li>Carol</li>
         </ul>
       </li>
-      <li>My friend Jessica</li>
-      <li>My friend Candy</li>
+      <li>
+        <a href="https://www.jessica.com">
+          My friend <strong>Jessica</strong>
+          <img src="img/jessica.jpg" alt="A picture of Jessica">
+        </a>
+      </li>
+      <li>
+          <a href="https://www.candy.com">
+            My friend <strong>Candy</strong>
+            <img src="img/candy.jpg" alt="A picture of Candy">
+          </a>
+      </li>
     </ul>
 
     <h3>Flavors of ice cream</h3>
