add css stylesheet

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Michael's favorite things</title>
   </head>
   <body>
@@ -11,7 +12,7 @@
     -->
     <h3>People</h3>
     <p>Here are some of my favorite people!</p>
-    <ul> 
+    <ul>
       <li>
         <a href ="https://www.christopher.com">
           My brother <strong>Christopher</strong>
@@ -25,7 +26,7 @@
               <strong>Steve</strong>
               <img src="img/steve.jpg" alt="A picture of Steve">
             </a>
-          </li>   
+          </li>
           <li>
             <a href="https://www.carol.com">
               <strong>Carol</strong>
