add pictures of favorite places

--- a/favorite-places.html
+++ b/favorite-places.html
@@ -11,13 +11,20 @@
 
       <ul>
         <li>Portland</li>
+          <img src="img/portland.jpg" alt="A picture of Portland">
         <li>Japan</li>
+          <img src="img/japan.jpg" alt="A picture of a Japanese pagoda and waterfall">
         <li>Madagascar</li>
+          <img src="img/madagascar.jpg" alt="A picture of baobab trees in Madagascar">
         <li>Australia</li>
+          <img src="img/australia.jpg" alt="A picture of a cute little kangaroo on the beach">
         <li>Malta</li>
+          <img src="img/malta.jpg" alt="A picture of Malta and the ocean">
         <li>Saturn</li>
+          <img src="img/saturn.jpg" alt="A picture of Saturn">
         <li>Vulcan</li>
+          <img src="img/searchforspock.jpg" alt="A picure of the Temple of Mount Seleya on Vulcan">
 
-    </ul>
+      </ul>
 
   </body>
