--- a/favorite-places.html
+++ b/favorite-places.html
@@ -10,20 +10,40 @@
       <p>Here are some of my favorite places...</p>
 
       <ul>
-        <li>Portland</li>
+        <a href="https://www.travelportland.com/">
+          <li>Portland</li>
           <img src="img/portland.jpg" alt="A picture of Portland">
-        <li>Japan</li>
+        </a>
+
+        <a href="https://www.japan.travel/en/">
+          <li>Japan</li>
           <img src="img/japan.jpg" alt="A picture of a Japanese pagoda and waterfall">
-        <li>Madagascar</li>
+        </a>
+
+        <a href="https://www.lonelyplanet.com/madagascar">
+          <li>Madagascar</li>
           <img src="img/madagascar.jpg" alt="A picture of baobab trees in Madagascar">
-        <li>Australia</li>
+        </a>
+
+        <a href="https://www.australia.com/en-us">
+          <li>Australia</li>
           <img src="img/australia.jpg" alt="A picture of a cute little kangaroo on the beach">
-        <li>Malta</li>
+        </a>
+
+        <a href="https://www.visitmalta.com/en/home">
+          <li>Malta</li>
           <img src="img/malta.jpg" alt="A picture of Malta and the ocean">
-        <li>Saturn</li>
+        </a>
+
+        <a href="https://sites.google.com/site/thebestplaceinspacesaturn101/attractions">
+          <li>Saturn</li>
           <img src="img/saturn.jpg" alt="A picture of Saturn">
-        <li>Vulcan</li>
+        </a>
+
+        <a href="http://www.vulcantourism.com/">
+          <li>Vulcan</li>
           <img src="img/searchforspock.jpg" alt="A picure of the Temple of Mount Seleya on Vulcan">
+        </a>
 
       </ul>
 
