add additional inline elements

--- a/favorite-places.html
+++ b/favorite-places.html
@@ -7,44 +7,43 @@
 
   <body>
     <h1>My favorite places</h1>
-      <p>Here are some of my favorite places...</p>
+      <p><em>Here are some of my favorite places...</em></p>
 
       <ul>
         <a href="https://www.travelportland.com/">
-          <li>Portland</li>
+          <li><strong>Portland</strong></li>
           <img src="img/portland.jpg" alt="A picture of Portland">
         </a>
 
         <a href="https://www.japan.travel/en/">
-          <li>Japan</li>
+          <li><strong>Japan</strong></li>
           <img src="img/japan.jpg" alt="A picture of a Japanese pagoda and waterfall">
         </a>
 
         <a href="https://www.lonelyplanet.com/madagascar">
-          <li>Madagascar</li>
+          <li><strong>Madagascar</strong></li>
           <img src="img/madagascar.jpg" alt="A picture of baobab trees in Madagascar">
         </a>
 
         <a href="https://www.australia.com/en-us">
-          <li>Australia</li>
+          <li><strong>Australia</strong></li>
           <img src="img/australia.jpg" alt="A picture of a cute little kangaroo on the beach">
         </a>
 
         <a href="https://www.visitmalta.com/en/home">
-          <li>Malta</li>
+          <li><strong>Malta</strong></li>
           <img src="img/malta.jpg" alt="A picture of Malta and the ocean">
         </a>
 
         <a href="https://sites.google.com/site/thebestplaceinspacesaturn101/attractions">
-          <li>Saturn</li>
+          <li><strong>Saturn</strong></li>
           <img src="img/saturn.jpg" alt="A picture of Saturn">
         </a>
 
         <a href="http://www.vulcantourism.com/">
-          <li>Vulcan</li>
+          <li><strong>Vulcan</strong></li>
           <img src="img/searchforspock.jpg" alt="A picure of the Temple of Mount Seleya on Vulcan">
         </a>
-
       </ul>
 
   </body>
